--- a/src/components/flyButton/style.css
+++ b/src/components/flyButton/style.css
@@ -1,5 +1,5 @@
 .flyButton {
-  position: absolute;
+  display: inline-block;
   text-align: center;
 }
 .flyButton > button {
@@ -14,6 +14,10 @@
   animation: btn  4s infinite ease;
   background: -webkit-radial-gradient(3em 1em, ellipse cover, #fff 0%,#d2ebf9 100%);
   z-index: 1;
+}
+.flyButton > button:hover {
+  background: #7676C9;
+  transition-duration: 1s;
 }
 #shadow {
   display: block;
